[JON-5] Specify university building in transaction (#46)